# Paradox-Editor

./: CMakeLists.txt  LICENSE  Readme.md  Syntax Highlight.drawio  icon.svg.import  main.tscn  main.tscn3857268193.tmp  project.godot
Assets/Icons/: folder_hover.png.import  folder_norm.png.import  graph_hover.png.import  graph_norm.png.import  loc_hover.png.import  loc_norm.png.import
include/Common/: File.hpp  FileInterface.hpp
include/Editor/: Window.hpp
include/Syntax/: Lexer.hpp  Parser.hpp  Token.hpp
source/FileList/: FileList.gd  FileList.gd.uid
source/Settings/: Settings.gd  Settings.gd.uid  SettingsTab.gd  SettingsTab.gd.uid
source/Sidebar/: MenuContainer.gd  MenuContainer.gd.uid  MenuController.gd  MenuController.gd.uid  Sidebar.gd  Sidebar.gd.uid
src/: main.cpp
src/Common/: File.cpp  FileInterface.cpp
src/Editor/: TextEditor.cpp  Window.cpp
tools/: rule_generator.ipynb
